drone page updated

--- a/src/components/products/products.css
+++ b/src/components/products/products.css
@@ -48,7 +48,7 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
-  .testing img {
+  .testing>img {
     width: 100%;
     height: 100%;
   }
