--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,12 +1,11 @@
 .button {
     width: 110px;
     color: #fff!important;
-    background-color: hsla(0,0%,100%,.26667)!important;
+    background-color: hsla(0,0%,100%,.26667);
     border-color: #fff!important;
     text-decoration: none!important;
     border: 1px solid transparent;
   }
-  .button:hover {
-    
+  .button:hover { 
     border: 1px solid black;
   }
